--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,8 +18,8 @@ header h1 {
 .nametag {
     display: flex;
     height: 86px;
-    border: 20px;
     width: 300px;
+    border: 20px;
     border-radius: 22px;
     position: absolute;
     justify-content: center;
@@ -31,23 +31,30 @@ header h1 {
 
 header ul {
     display: flex;
-    justify-content: space-evenly;
-    width: 50%;
-    padding: 5px;
+    justify-content: flex-end;
+    width: 100%;
+    height: 100px;
+    border: 0px;
+    padding: 10px;
 }
 
 .navigation-bar {
     display: flex;
     justify-content: flex-end;
-    align-content: space-between;
-    padding: 2px;
-    border: 1px;
-    right: 50px;
-    bottom: 0px;
+    width: 100%;
+    height: 100px;
 }
 
+/*
 span {
     ::hover
+}
+*/
+
+.bookcase {
+    width: 100%;
+    position: absolute;
+    z-index: -1;
 }
 
 .container {
@@ -55,7 +62,8 @@ span {
     display: inline-block;
     border: 7px solid rosybrown;
     margin: 20px;
-    left: 100px;
+    left: 70px;
+    position: absolute;
 }
 
 a {
@@ -66,15 +74,13 @@ a {
     font-weight: bold;
 }
 
-/*
+
 .part {
     display: flex;
-    justify-content: right;
+    align-items: flex-end;
     flex-direction: column;
-    position: absolute; 
-    top: 0;
+    width: 100%;
 }
-*/
 
 .display {
     background-color: beige;
@@ -82,6 +88,7 @@ a {
     border: 10px solid lightpink;
     padding: 50px;
     margin-top: 20px;
+    height: 200px;
 }
 
 footer {
