--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,15 @@
+:root {
+    --light: lightpink;
+    --dark: palevioletred;
+    --darker: rgb(97, 59, 220);
+    --darkest: rgb(46, 30, 105);
+    --forest: rgb(42, 68, 13);
+}
+
+* {
+    font-family: 'Trebuchet MS';
+}
+
 html {
     background-color: beige;
 }
@@ -6,27 +18,26 @@ header {
     background-color: rosybrown;
     display: block;
     height: 100px;
-    position: relative;
+    position: relative; 
 }
 
 header h1 {
     font-size: 400%;
-    font-family: 'Trebuchet MS';
     color: white;
 }
 
-.nametag {
+#nametag {
     display: flex;
     height: 86px;
     width: 300px;
-    border: 20px;
+    border: 20px; 
     border-radius: 22px;
-    position: absolute;
+    position: absolute; 
     justify-content: center;
     align-items: center;
     bottom: -12px;
     left: 17px;
-    background-color: lightpink;
+    background-color: var(--forest);
 }
 
 header ul {
@@ -38,56 +49,116 @@ header ul {
     padding: 10px;
 }
 
-.navigation-bar {
-    display: flex;
-    justify-content: flex-end;
-    width: 100%;
-    height: 100px;
-}
-
 /*
 span:hover::after {
     display: none
 }
 */
 
-.bookcase {
+#bookcase {
     width: 100%;
     position: absolute;
     z-index: -1;
 }
 
-.container {
-    max-width: 300px;
+#profile {
     display: flex;
+    max-width: 300px;
     border: 7px solid rosybrown;
     margin: 20px;
-    left: 70px;
+}
+
+h2 {
+    font-size: 200%;
 }
 
 a {
     color: white;
     padding: 15px;
-    font-family: cursive, 'Trebuchet MS';
     font-size: 20px;
     font-weight: bold;
 }
 
+p {
+    color: white;
+    font-size: 20px;
+    color: var(--forest);
+}
 
 .part {
     display: flex;
     align-items: flex-end;
     flex-direction: column;
+    align-content: space-around;
     width: 100%;
+}
+
+
+article {
+    display: flex;
+    margin-top: 20px;
+    padding: 50px;
 }
 
 .display {
     background-color: beige;
     width: 600px;
-    border: 10px solid lightpink;
+    border-left: 10px solid var(--forest);
     padding: 50px;
     margin-top: 20px;
     height: 200px;
+}
+
+.title {
+    background-color: beige;
+    padding: 50px;
+    margin-top: 20px;
+    height: 200px;
+}
+
+.allimages {
+    background-color: beige;
+    width: 600px;
+    border-left: 10px solid var(--forest);
+    padding: 50px;
+    margin-top: 20px;
+    height: 700px;
+}
+
+.imageborder {
+    display: flex;
+    flex-wrap: wrap;
+    border: 5px solid var(--light);
+    justify-content: space-around;
+}
+
+.workimages {
+    display: flex;
+    margin: 30px;
+}
+
+.photo{
+    margin: 10px;
+    
+}
+
+/* .workbanner {
+    background-color: beige;
+    width: 600px;
+    border-left: 10px solid lightpink;
+    padding: 50px;
+    margin-top: 20px;
+    height: 700px;
+} */
+
+.banner {
+    height: 200px;
+    width: 500px;
+}
+
+.photo {
+    height: 100px;
+    width: 400px;
 }
 
 footer {
@@ -97,11 +168,147 @@ footer {
 }
     
 footer h3 {
-    display: flexbox;
     background-color: rosybrown;
     font-size: 15pt;
-    font-family: 'Trebuchet MS';
     color: white;
     padding: 15px;
+}
+
+/*
+Media Query at 768px
+*/
+
+@media (max-width: 768px) {
+ header {
+    background-color: var(--dark);
+    display: block;
+    height: 100px;
+    position: relative; 
+ }
+ header h1 {
+    font-size: 300%;
+    color: white;
+ }
+    
+ #nametag {
+    display: flex;
+    height: 76px;
+    width: 200px;
+    border: 20px; 
+    border-radius: 22px;
+    justify-content: center;
+    align-items: center;
+    bottom: -12px;
+    left: 17px;
+    background-color: var(--light);
+ }
+
+ #profile {
+    display: flex;
+    max-width: 250px;
+    border: 7px solid var(--dark);
+    margin: 20px;
+ }
+
+ .display {
+    background-color: beige;
+    width: 400px;
+    border-left: 10px solid var(--dark);
+    padding: 50px;
+    margin-top: 20px;
+    height: 200px;
+ }
+
+ .allimages {
+    background-color: beige;
+    width: 400px;
+    border-left: 10px solid var(--dark);
+    padding: 50px;
+    margin-top: 20px;
+    height: 700px;
+ }
+    
+ a {
+    color: white;
+    padding: 15px;
+    font-size: 17px;
+    font-weight: bold;
  }
  
+ p {
+    color: white;
+    font-size: 20px;
+    color: var(--dark);
+}
+
+}
+
+/*
+Media Query at 568px
+Just before navigation bar reaches h1 element
+*/
+
+@media (max-width: 608px) {
+ header {
+    background-color: var(--darker);
+    display: block;
+    height: 100px;
+    position: relative; 
+ }
+    
+ header h1 {
+    font-size: 200%;
+    color: white;
+ }
+        
+ #nametag {
+    display: flex;
+    height: 66px;
+    width: 150px;
+    border: 20px; 
+    border-radius: 22px;
+    justify-content: center;
+    align-items: center;
+    bottom: -12px;
+    left: 17px;
+    background-color: var(--darkest);
+ }
+    
+ #profile {
+    display: flex;
+    max-width: 250px;
+    border: 7px solid var(--darker);
+    margin: 20px;
+ }
+    
+ .display {
+    background-color: beige;
+    width: 400px;
+    border-left: 10px solid var(--darkest);
+    padding: 50px;
+    margin-top: 20px;
+    height: 200px;
+ }
+    
+ .allimages {
+    background-color: beige;
+    width: 400px;
+    border-left: 10px solid var(--darkest);
+    padding: 50px;
+    margin-top: 20px;
+    height: 700px;
+ }
+        
+ a {
+    color: white;
+    padding: 12px;
+    font-size: 14px;
+    font-weight: bold;
+ }
+ 
+ p {
+    color: white;
+    font-size: 20px;
+    color: var(--darkest);
+}
+}
