--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -1,18 +1,20 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
+  * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Trebuchet MS';
+}
+
   html {
-    height: 100%;
-  }
+  height: 100%;
+  background-color: beige;
+  scroll-behavior: smooth;
+}
   
   body {
-    min-height: 100%;
-    line-height: 1;
-    font-family: sans-serif;
-  }
+  min-height: 100%;
+  line-height: 1;
+}
   
   h1,
   h2,
@@ -22,12 +24,11 @@
   h6 {
     font-size: 100%;
   }
-
-  ol,
-ul {
+  ol, ul {
   list-style: none;
+  
 }
 
-a {
+  a {
   text-decoration: none;
 }
