--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,18 +154,16 @@ article {
     margin: 0px;
 }
 
-.photo{
-    margin: 10px;
-    
-}
 .banner {
     height: 200px;
     width: 500px;
 }
 
 .photo {
-    height: 100px;
-    width: 400px;
+    height: 120px;
+    width: 200px;
+    margin: 10px;
+    border: 5px solid var(--forest);
 }
 
 footer {
@@ -241,6 +239,12 @@ Media Query at 768px
     margin: 20px;
  }
 
+ .title {
+    padding: 50px;
+    margin-top: 20px;
+    height: 200px;
+}
+
  .display {
     background-color: beige;
     width: 400px;
@@ -259,6 +263,12 @@ Media Query at 768px
     height: 650px;
  }
  
+ .photo {
+    height: 120px;
+    width: 200px;
+    margin: 10px;
+    border: 5px solid var(--darkest);
+}
  p {
     color: #fff;
     font-size: 20px;
